--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,10 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+/* variables */
+
+$gray-medium-light: #eaeaea;
+
 /* unversal */
 
 body {
@@ -17,10 +21,10 @@ textarea {
 
 .center {
   text-align: center;
-}
 
-.center h1 {
-  margin-bottom: 10px;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -42,7 +46,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $gray-light;
 }
 
 p {
@@ -56,32 +60,33 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #777;
+  color: $gray-light;
   text-emphasis: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
 
-#logo:hover {
-  color: #777;
-  text-decoration: none;
+  &:hover {
+    color: $gray-light;
+    text-decoration: none;
+  }
 }
 
 /* footer */
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
+  border-top: 1px solid $gray-medium-light;
+  color: $gray-light;
 }
 
 footer a {
-  color: #555;
+  color: $gray;
 }
 
 footer a:hover {
-  color: #222;
+  color: $gray-darker;
 }
 
 footer small {
