--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,9 +3,9 @@
   <span class='user'><%= link_to micropost.user.name, micropost.user %></span>
   <span class='content'><%= micropost.content %></span>
   <span class='timestamp'>
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago
-    <% if current_user?(micropost.user)? %>
-      <%= link_to 'delete', method: :delete, data: { comfirm: "You sure?" } %>
+    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+    <% if current_user?(micropost.user) %>
+    <%= link_to 'delete', micropost, method: :delete, data: { confirm: 'You sure?' } %>
     <% end %>
   </span>
 </li>
