--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class='container'>
+    <div class='container' id='vue-container'>
       <% flash.each do |message_type, message| %>
         <div class='alert alert-<%= message_type %>'><%= message %></div>
       <% end %>
@@ -19,4 +19,5 @@
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
+  <%= javascript_pack_tag 'application' %>
 </html>
