--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %>
-  <ol class='microposts'>
+  <ol class='microposts' id='vue-micropost'>
     <%= render @feed_items %>
   </ol>
   <%= will_paginate @feed_items %>
