--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
-    <div class='col-md-8'>
+    <div class='col-md-8' id='feed'>
       <h3>Micropost feed</h3>
       <%= render 'shared/feed' %>
     </div>
